<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <TextView
        android:id="@+id/textHelpUitleg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uitlegApp" />
    
	<TextView
        android:id="@+id/textHelpVersie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/versie" />
	
	<TextView
        android:id="@+id/textHelpMaker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/maker" />

</LinearLayout>
