<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome" />
    
    <TextView 
        android:id="@+id/viewRegisterName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name" />
    
    <EditText
        android:id="@+id/textRegisterName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    
    <TextView 
        android:id="@+id/viewRegisterBDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/geboorte" 
        />

    
</RelativeLayout>
